# pyhcl-fancy

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  mkdocs.yml  pyproject.toml  release-please-config.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: lint.yml  publish.yml  release-please.yml  test.yml
docs/: code_documentation.md  components.md  index.md
docs/source/: conf.py  index.rst
pyhcl_fancy/blocks/: terraform_block.py
pyhcl_fancy/blocks/real/: real_block.py
pyhcl_fancy/blocks/real/data/: data_block.py
pyhcl_fancy/blocks/real/module/: module_block.py
pyhcl_fancy/blocks/real/resource/: resource_block.py
pyhcl_fancy/blocks/reference/local/: local_block.py
pyhcl_fancy/blocks/reference/meta/: meta_block.py
pyhcl_fancy/blocks/reference/output/: output_block.py
pyhcl_fancy/blocks/reference/provider/: provider_block.py
pyhcl_fancy/blocks/reference/variable/: variable_block.py
pyhcl_fancy/collection_tree/: exceptions.py  node.py  tree.py  utils.py
pyhcl_fancy/parser/: exceptions.py  parser.py  utils.py
tests/unit/: conftest.py
tests/unit/blocks/: test_data_block.py  test_local_block.py  test_meta_block.py  test_module_block.py  test_output_block.py  test_provider_block.py  test_real_block.py  test_resource_block.py  test_terraform_block.py  test_variable_block.py
tests/unit/collection_tree/: test_node.py  test_tree.py
tests/unit/parser/: test_parser.py  test_parser_utils.py
tests/unit/sample_terraform/basic/: main.tf
tests/unit/sample_terraform/data/: simple_data.tf
tests/unit/sample_terraform/locals/: simple_locals.tf  (+2 more)
(+24 files in other folders)
