[tool.poetry]
name = "pyhcl-fancy"
version = "0.1.0"
description = "Parse HCL defined Terraform into easier to use Python objects."
authors = ["ianms17 <ianmstephenson17@gmail.com>"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyhcl2 = "^1.1.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
